<resources>
    <string name="app_name">PopMovies</string>

    <string name="release_date">Release Date:\u0020 %1$s</string>
    <string name="rating">Rating:\u0020 %1$s</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="details">Details</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
